bugfix [#21057] Python: accessing DriverVariable targets causes segmentation violation collections were detected as arrays.